# soulshark

./: .gitignore  README.md  bun.lockb  package.json  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: sldl-aarch64-apple-darwin  sldl.deps.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: downloads.rs  mod.rs  settings.rs  sldl.rs  spotify.rs
src-tauri/src/downloads/: mod.rs
src-tauri/src/settings/: crypto.rs  mod.rs  store.rs
src/components/: logo.tsx
src/components/downloads/: DownloadsPage.tsx
src/components/settings/: SettingsPage.tsx
src/components/spotify/: SpotifyAuth.tsx  SpotifyContent.tsx  SpotifyPlaylistItem.tsx  SpotifySearch.tsx  SpotifyTrackList.tsx
src/lib/: SpotifyContext.tsx  spotify.ts  spotifyTypes.ts
