[package]
name = "soulshark"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "soulshark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
chacha20poly1305 = "0.10.1"
rand = "0.8.5"
base64 = "0.13.0"
reqwest = { version = "0.12.15", features = ["json"] }
tauri-plugin-localhost = "2"
tiny_http = "0.12.0"
url = "2.5.4"
once_cell = "1.21.3"
tokio = { version = "1.44.1", features = ["rt"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
chrono = { version = "0.4.35", features = ["serde"] }
regex = "1.11.1"
tokio-stream = { version = "0.1.17", features = ["fs"] }
